[package]
name = "rust-api-test"
description = "CLI tool for testing REST APIs"
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Prasad Jivane <prasadjivane@gmail.com>"]
repository = "https://github.com/prasadjivane/rust-api-test"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
