[package]
name = "rust-api-test"
description = "CLI tool for testing REST APIs"
version = "1.1.1"
edition = "2021"
include = [
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]
keywords = ["rust-api-test", "cli", "api-test"]
license = "MIT"
authors = ["Prasad Jivane <prasadjivane@gmail.com>"]
repository = "https://github.com/prasadjivane/rust-api-test"
rust-version = "1.76.0"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }


[lib]
path = "src/api.rs"

[package.metadata.playground]
features = ["full", "visit", "visit-mut", "fold", "extra-traits"]
